infra/k8s/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: collector.staging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-kong
            port:
              number: 8000
  - host: grafana.staging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-grafana
            port:
              number: 3000
  - host: keycloak.staging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-keycloak
            port:
              number: 8080
  - host: adminer.staging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-adminer
            port:
              number: 80
  - host: rabbitmq.staging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-rabbitmq
            port:
              number: 15672
